# cogency

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_AUTOPSY.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  PURPOSE.md  README.md  README_py.md  RELEASE_NOTES.md  SECURITY.md  TIER2_POWER_USER_FEATURES.md  TODO.md  architecture.md  audit_docstrings.py  bad.json  cogency_state.db  debug_agent.py  debug_identity.py  debug_reasoning_prompt.py  debug_test.py  dx_gotchas.md  dx_reality_check.py  dx_reality_check_report.txt  example.py  handover.md  justfile  justfile_bench  min_batch.py  onboarding_analysis.md  provider_limitation.md  pyproject.toml  reality_check.py  setup_test_env.py  smoke_test.py  space.toml  spec.md  test_agent.py  (+12 more)
.githooks/: commit-msg
.github/workflows/: docs-coverage.yml  pr-size.yml
archive/evals/: __init__.py
archive/scripts/: toolset.py
archive/src/: __init__.py  cli.py
docs/: ARCHITECTURE.md  EVALUATION.md  EXAMPLES.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PROTOCOL.md  README.md  agent-api.md  agent-config.md  api.md  architecture.md  blueprint.md  cli.md  cogency.md  config.md  configuration.md  conversation.md  deployment.md  differentiation.md  evaluation.md  examples.md  execution.md  langgraph-removal.md  learning.md  llm-setup.md  memory.md  philosophy.md  proof.md  protocol.md  providers.md  quickstart.md  reasoning.md  reflection.md  roadmap.md  security.md  state-schema.md  tools.md  troubleshooting.md  ux.md  xml-protocol.md
docs/archive/: README.md  TODO.md  architecture.md  canonical.md  future_work.md  memory.md  notifications.md  prompting.md  quickstart.md  recall.md  tools.md
docs/dev/: README.md  agent-emission-architecture.md  architecture.md  archival.md  benchmarks.md  cli.md  errors.md  events.md  fractal.md  memory.md  namespace-ii.md  namespace.md  persistence.md  providers.md  schema.md  security_spec.md  semantic.md  state.md  telemetry.md
evals/: .gitignore  CANONICAL_STRUCTURE.md  CONTEXT.md  EVALUATION.md  README.md  __init__.py  __main__.py  assertions.py  baseline.py  case.py  cases.py  compare.py  config.py  core.py  demo.py  demo_flow_orchestrator.py  error_recovery.py  eval.py  eval_logging.py  evaluator.py  generate.py  harness.py  judge.py  logging.py  main.py  memory_persistence.py  multi_provider.py  quick.py  reasoning.py  reasoning_chain.py  review.py  run.py  run_cross_provider.py  run_showcase.py  run_suite.py  run_suite_bench.py  runner.py  sampling.py  security_eval.py  showcase.py  (+5 more)
evals/benchmarks/: gaia.py  long_horizon.py  swe.py  swe_bench.py  tool_performance.py
evals/core/: __init__.py  __main__.py  context.py  eval.py  models.py  notifications.py  report.py  (+2 more)
examples/: README.md  advanced.py  arsenal.py  basic.py  basic_usage.py  chat.py  coder.py  coding.py  complex.py  config.py  conversation.py  custom_tool.py  devops.py  fast.py  hello.py  interactive.py  memory.py  ml.py  multitool.py  registry.py  research.py  research_improved.py  simple.py  smoketest.py  streaming.py  streaming_example.py  telemetry_demo.py  tool_composition.py  tools.py  tracing.py
js/: README.md  package-lock.json  package.json  tsconfig.json
python/: CHANGELOG.md  README.md  RELEASE_NOTES.md  check_import.py  demo_streaming.py  pyproject.toml  test_streaming.py  test_streaming_mock.py
python/docs/: memory.md  streaming.py
python/examples/: streaming_example.py  streaming_simple.py
python/src/cogency/: __main__.py  agent.py  cli.py  config.py  context.py  llm.py  parsing.py  trace.py  types.py
python/src/cogency/embed/: __init__.py  base.py  nomic.py
python/src/cogency/llm/: anthropic.py  base.py  gemini.py  grok.py  mistral.py  openai.py
python/src/cogency/memory/: __init__.py  base.py  filesystem.py  semantic.py  tools.py
python/src/cogency/nodes/: __init__.py  act.py  act_node.py  invoke_llm.py  plan.py  plan_node.py  reason.py  reflect.py  respond.py  respond_node.py  router.py
python/src/cogency/tools/: __init__.py  base.py  calculator.py  file_manager.py  web_search.py
python/src/cogency/utils/: __init__.py  cancellation.py  errors.py  formatting.py  parsing.py
python/src/data/: autodocs
python/tests/: test_agent.py  test_agent_context.py  test_cancellation.py  test_check_import.py  test_config.py  test_context.py  test_core_functionality.py  test_infinite_recursion.py  test_interrupt.py  test_nodes.py  test_parsing_robustness.py  test_streaming.py  test_tools.py  test_trace.py  test_utils.py
python/tests/integration/: test_live_streaming.py
python/tests/llm/: test_gemini.py  test_key_rotator.py
python/tests/memory/: test_filesystem.py  test_semantic.py  test_tools.py
python/tests/tools/: test_base_tool.py  test_calculator.py  test_file_manager.py  test_web_search.py
python/tests/utils/: test_errors.py
sandbox/: flash.py  test_code_tool.py
scripts/: ask.py  chat.py  context_assembly.py  conversation_debug.py  execution_flow.py  memory_inspect.py  performance.py  tool_validation.py  tools.py  toolset.py
src/: docs.json
tests/: README.md  __init__.py  architecture_compliance.py  conftest.py  performance_baselines.py  test_agent.py  test_base_tool.py  test_cache.py  test_code_quality.py  test_context.py  test_coordination.py  test_core.py  test_errors.py  test_examples.py  test_execution.py  test_execution_core.py  test_flow.py  test_llm.py  test_llm_cache_integration.py  test_memory.py  test_memory_core.py  test_messaging.py  test_multiuser_isolation.py  test_nodes.py  test_output.py  test_resilience.py  test_response_shaper.py  test_rotation.py  test_router.py  test_routing.py  test_runner.py  test_simple_contracts.py  test_state.py  test_streaming.py  test_streaming_errors.py  test_tools.py  test_trace.py  test_tracer.py  test_tracer_integration.py  test_workflow.py
validation/: README.md  cross_provider_smoke.py  framework.py  human.py  run_all.py  run_comprehensive.py  util.py
website/: .dockerignore  .prettierrc  Dockerfile  astro.config.mjs  eslint.config.js  fly.toml  justfile  package.json  pnpm-lock.yaml  tailwind.config.mjs
(+1500 files in other folders)
